# mpp-client-sdk-python

./: README.md  pyproject.toml
mpp-buyer-sdk-python/: README.md
mpp-buyer-sdk-python/src/plural_mpp_buyer/client/: __init__.py  auth_manager.py  plural_buyer.py
mpp-buyer-sdk-python/src/plural_mpp_buyer/grantex/: audit_pusher.py  grant_verifier.py
mpp-buyer-sdk-python/src/plural_mpp_buyer/types/: __init__.py  auth.py  errors.py  mandate.py
mpp-buyer-sdk-python/src/plural_mpp_buyer/utils/: validation.py
mpp-buyer-sdk-python/tests/: test_auth_manager.py
src/plural_mpp_buyer/: __init__.py
src/plural_mpp_buyer/client/: api_client.py  credential_builder.py  fetch_interceptor.py  plural_buyer.py
src/plural_mpp_buyer/config/: __init__.py  environments.py
src/plural_mpp_buyer/grantex/: __init__.py  audit_logger.py  scopes.py
src/plural_mpp_buyer/types/: __init__.py  challenge.py  config.py  grantex.py  token.py
src/plural_mpp_buyer/utils/: base64url.py  errors.py  fetch_helpers.py
tests/: test_customer_reference.py  test_smoke.py
